recursion.cons.lessons.recursion.cons.Occurrence.scala.error
occurences:3: error: type mismatch;
 found   : Unit
 required: Int
	if(l == Nil)
        ^